After testing horizontal scroll found out that prior fix did not work, so had to add !important after margin settings on file navbar.css , horizontal scroll has been removed.

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -8,7 +8,11 @@
   font-size: 36px;
   font-family: Tinos, serif;
   font-weight: bold;
-  margin: 0;
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+
+
+
 
   @media screen and (min-width: 401px) {
 
